--- a/Newsletter.html
+++ b/Newsletter.html
@@ -6,6 +6,19 @@
     <title>Tabbed Interface</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
+        /* Add background image */
+        body {
+            background-image: url('your-background-image.jpg'); /* Replace 'your-background-image.jpg' with your image path */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
+
+        /* Change navbar color to crimson */
+        .navbar {
+            background-color: crimson;
+        }
+
         .tab-content {
             padding: 20px;
         }
@@ -17,6 +30,30 @@
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <a class="navbar-brand" href="#">Your Brand</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <ul class="nav nav-tabs" id="myTabs" role="tablist">
         <li class="nav-item" role="presentation">
@@ -36,25 +73,25 @@
         <div class="tab-pane fade show active" id="content-2022" role="tabpanel" aria-labelledby="tab-2022">
             <!-- Content for 2022 -->
             <h3>2022 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022">Spring 2022</a></p>
         </div>
         <div class="tab-pane fade" id="content-2021" role="tabpanel" aria-labelledby="tab-2021">
             <!-- Content for 2021 -->
             <h3>2021 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter">Fall 2021</a></p>
         </div>
         <div class="tab-pane fade" id="content-2020" role="tabpanel" aria-labelledby="tab-2020">
             <!-- Content for 2020 -->
             <h3>2020 Articles</h3>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020" target="_blank">Spring 2020</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020" target="_blank">Summer 2020</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020">Spring 2020</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020">Summer 2020</a></p>
         </div>
         <div class="tab-pane fade" id="content-2019" role="tabpanel" aria-labelledby="tab-2019">
             <!-- Content for 2019 -->
             <h3>2019 Articles</h3>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019" target="_blank">Spring 2019</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019" target="_blank">Summer 2019</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019" target="_blank">Fall 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019">Spring 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019">Summer 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019">Fall 2019</a></p>
         </div>
     </div>
 </div>
