--- a/Newsletter.html
+++ b/Newsletter.html
@@ -8,7 +8,7 @@
     <style>
         /* Add background image */
         body {
-            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/346269191_1174482293949325_4326495172360647463_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=5614bc&_nc_ohc=kQUEjra0iMcAX__Vn6T&_nc_ht=scontent.ftul2-1.fna&oh=00_AfA0W0NUCNvynMDPse_xPGPOLWkTBefsg_I2f5cJv8dkiQ&oe=64FDF121'); 
+            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/315024550_5776037012462050_5778154911124587686_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=3PLMzL3b3WoAX-Uc6aq&_nc_ht=scontent.ftul2-1.fna&oh=00_AfBNTqbykmllZTlekzfh_FAfPPiFDEnXFdkK8RgS3JYasA&oe=64FCB96C'); 
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
@@ -39,36 +39,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#content-2022" data-bs-toggle="tab" role="tab" aria-controls="content-2022" aria-selected="true">2022</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="#content-2021" data-bs-toggle="tab" role="tab" aria-controls="content-2021" aria-selected="false">2021</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#content-2020" data-bs-toggle="tab" role="tab" aria-controls="content-2020" aria-selected="false">2020</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#content-2019" data-bs-toggle="tab" role="tab" aria-controls="content-2019" aria-selected="false">2019</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
 <div class="container">
-    <ul class="nav nav-tabs" id="myTabs" role="tablist">
-        <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="tab-2022" data-bs-toggle="tab" href="#content-2022" role="tab" aria-controls="content-2022" aria-selected="true">2022</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2021" data-bs-toggle="tab" href="#content-2021" role="tab" aria-controls="content-2021" aria-selected="false">2021</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2020" data-bs-toggle="tab" href="#content-2020" role="tab" aria-controls="content-2020" aria-selected="false">2020</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2019" data-bs-toggle="tab" href="#content-2019" role="tab" aria-controls="content-2019" aria-selected="false">2019</a>
-        </li>
-    </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="content-2022" role="tabpanel" aria-labelledby="tab-2022">
             <!-- Content for 2022 -->
