--- a/Newsletter.html
+++ b/Newsletter.html
@@ -3,58 +3,93 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Newsletter Archieve</title>
+    <title>Tabbed Interface</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <style>
-        .tab-content {
-            padding: 20px;
+        /* Add background image */
+        body {
+            background-image: url('https://scontent.ftul2-1.fna.fbcdn.net/v/t39.30808-6/313024373_5739471069451978_8600557588831453002_n.jpg?stp=cp6_dst-jpg&_nc_cat=108&ccb=1-7&_nc_sid=5614bc&_nc_ohc=ABmWd_IN7DIAX9lMPVs&_nc_ht=scontent.ftul2-1.fna&oh=00_AfA4OqjrTVpSG0EQUKkA_04S9tJMoHs6btT-2AiSix16tg&oe=64FDEA2F'); 
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-color: #f5f5f5; /* Cream color for the top bar */
         }
 
+        /* Change navbar color to crimson */
+        .navbar {
+            background-color: crimson;
+        }
+
+        /* Customize active tab color */
         .nav-tabs .nav-item.nav-link.active {
             background-color: #007bff;
             color: #fff;
         }
+
+        /* Customize tab hover color */
+        .nav-tabs .nav-item.nav-link:hover {
+            background-color: #ff5722; /* Orange color on hover */
+            color: #fff;
+        }
+
+        .tab-content {
+            padding: 20px;
+        }
+
+        /* Remove border from active tab content */
+        .tab-content .tab-pane.fade.show.active {
+            border: none;
+        }
     </style>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#content-2022" data-bs-toggle="tab" role="tab" aria-controls="content-2022" aria-selected="true">2022</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#content-2021" data-bs-toggle="tab" role="tab" aria-controls="content-2021" aria-selected="false">2021</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#content-2020" data-bs-toggle="tab" role="tab" aria-controls="content-2020" aria-selected="false">2020</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#content-2019" data-bs-toggle="tab" role="tab" aria-controls="content-2019" aria-selected="false">2019</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container">
-    <ul class="nav nav-tabs" id="myTabs" role="tablist">
-        <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="tab-2022" data-bs-toggle="tab" href="#content-2022" role="tab" aria-controls="content-2022" aria-selected="true">2022</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2021" data-bs-toggle="tab" href="#content-2021" role="tab" aria-controls="content-2021" aria-selected="false">2021</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2020" data-bs-toggle="tab" href="#content-2020" role="tab" aria-controls="content-2020" aria-selected="false">2020</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="tab-2019" data-bs-toggle="tab" href="#content-2019" role="tab" aria-controls="content-2019" aria-selected="false">2019</a>
-        </li>
-    </ul>
     <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="content-2022" role="tabpanel" aria-labelledby="tab-2022">
             <!-- Content for 2022 -->
             <h3>2022 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022">Spring 2022</a></p>
         </div>
         <div class="tab-pane fade" id="content-2021" role="tabpanel" aria-labelledby="tab-2021">
             <!-- Content for 2021 -->
             <h3>2021 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter">Fall 2021</a></p>
         </div>
         <div class="tab-pane fade" id="content-2020" role="tabpanel" aria-labelledby="tab-2020">
             <!-- Content for 2020 -->
             <h3>2020 Articles</h3>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020" target="_blank">Spring 2020</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020" target="_blank">Summer 2020</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2020">Spring 2020</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-summer-2020">Summer 2020</a></p>
         </div>
         <div class="tab-pane fade" id="content-2019" role="tabpanel" aria-labelledby="tab-2019">
             <!-- Content for 2019 -->
             <h3>2019 Articles</h3>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019" target="_blank">Spring 2019</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019" target="_blank">Summer 2019</a></p>
-            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019" target="_blank">Fall 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-sp-2019">Spring 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-su-2019">Summer 2019</a></p>
+            <p><a href="https://www.ou.edu/price/news_center/newsletter/jcp-enews-fall2019">Fall 2019</a></p>
         </div>
     </div>
 </div>
