--- a/Newsletter.html
+++ b/Newsletter.html
@@ -67,12 +67,12 @@
         <div class="tab-pane fade show active" id="content-2022" role="tabpanel" aria-labelledby="tab-2022">
             <!-- Content for 2022 -->
             <h3>2022 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target=">Spring 2022</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-spring-2022" target="_blank">Spring 2022</a></p>
         </div>
         <div class="tab-pane fade" id="content-2021" role="tabpanel" aria-labelledby="tab-2021">
             <!-- Content for 2021 -->
             <h3>2021 Articles</h3>
-            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target=">Fall 2021</a></p>
+            <p><a href="https://mailchi.mp/ou.edu/jcpenney-leadership-program-fall-2021-newsletter" target="_blank">Fall 2021</a></p>
         </div>
         <div class="tab-pane fade" id="content-2020" role="tabpanel" aria-labelledby="tab-2020">
             <!-- Content for 2020 -->
